@startuml
package Theme {

  class "Theme\nPublication" as tp
  class "Theme" as th
  class "CustomFileType" as ft 
  
  abstract class "DataProduct" as dp << package product >>
  
  package Organisation {
    class "OrgUnit" as ou
    note right
      AGI ist als tech. 
      OrgUnit aller Themes
      hier auch erfasst
      und wird global allen
      Themen zugewiesen.
    end note
    
    class "Agency" as ag
    class "SubOrg" as so
    
    ag "1" -right- "*" so
  
    ou <|-- ag
    ou <|-- so
  }
  
  package "SubArea (Ausschnitt)" {
    class "Published\nSubArea" as pa
  }
  
  tp "1" -- "1..n" pa
  
  th "1" -- "*" tp
  th "*" -- "1" ou : "fach"
  tp "1" -- "1-n" dp
  tp "*" -- "*" ft
}

@endumldc